# lean-attio-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/attio_mcp/: client.py  formatting.py  server.py  tools_lists.py  tools_notes.py  tools_records.py  tools_schema.py  tools_tasks.py
